Switch back to minimised stupidtable.

--- a/entry.html
+++ b/entry.html
@@ -6,7 +6,7 @@
 	<link href="external/jquery-ui.css" rel="stylesheet">
 	<link href="trilateration.css" rel="stylesheet">
 	<script src="external/jquery-2.1.1.js"></script>
-	<script src="external/stupidtable.js"></script>
+	<script src="external/stupidtable.min.js"></script>
 	<script src="external/jquery-ui.js"></script>
 	<script src="trilateration.js"></script>
 <!--	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
